# ghost-1.16.5-server-loader

./: README.md
loader/: CMakeLists.txt
loader/src/: include.h  main.cpp
loader/src/dbg/: dbg.cpp  dbg.h
loader/src/inject/: injector.cpp
loader/src/math/: crypt.cpp  crypt.h
loader/src/math/strings/: strings.h
loader/src/utils/: find_string.h  rand_string.h  system.cpp  system.h  xorstr.h
mc/: CMakeLists.txt
mc/src/cheat/: cheat.cpp  cheat.h  settings.h
mc/src/classes/minecraft/: minecraft.h
mc/src/classes/minecraft/entity/: entity.cpp  entity.h
mc/src/classes/minecraft/local/: local.cpp  local.h
mc/src/classes/minecraft/render/: matrixstack.cpp  matrixstack.h  render.cpp  render.h
mc/src/classes/minecraft/world/: world.cpp  world.h
mc/src/complement/imgui/: imgui.h  imgui_custom.cpp
mc/src/complement/minhook/: hook.c
mc/src/dll/: dll.cpp  dll.h
mc/src/dll/hook/: opengl32.cpp  opengl32.h
mc/src/main/: include.h  jni.cpp  jni.h  main.cpp
mc/src/menu/: font.h  menu.cpp  menu.h
mc/src/system/: system.cpp  system.h
mc/src/utils/: ListModule.h  Math.h
mc/src/utils/crypt/: crypt.h
mc/src/utils/vector/: Vector.cpp  Vector.h
server/: users.db
server/bot/: commandsBot.py  dataBase.py  main.py
server/server/: main.py  private.key
server/server/DataBase/: dataBase.py
server/server/Server/: server.py  settingsServer.py
server/server/Server/Utils/: crypt.py
